--- a/styles/main.css
+++ b/styles/main.css
@@ -72,6 +72,21 @@ main {
     align-items: center;
 }
 
+main .first-heading {
+    color: var(--second-color);
+    font-weight:800;
+    text-align: center;
+}
+
+main .card {
+    margin: 1rem;
+    padding: 2rem;
+    box-shadow: 0 0 25px 3px var(--second-color);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
 main .welcome-heading {
     font-size: 2.5rem;
     font-weight:800;
@@ -87,6 +102,23 @@ main .welcome-subtitle {
     margin-top: 2rem;
 }
 
+.input-group {
+    margin: .3rem 0;
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+}
+.input-group p {
+    font-weight: bold;
+}
+.input-group input {
+    height: 40px;
+    font-size: 1rem;
+    padding: .2rem .4rem;
+    border: 2px solid var(--second-color);
+    border-radius: 5px;
+}
+
 .primary-button {
     padding: .5rem 1rem;
     font-weight: bold;
@@ -96,7 +128,26 @@ main .welcome-subtitle {
     background-color: var(--second-color);
     transition:all 0.1s ease-in-out;
     cursor: pointer;
+    text-decoration: none;
 }
 .primary-button:hover {
     background-color: var(--hover-second-color);
+}
+
+.primary-box {
+    padding: .5rem 1rem;
+    font-weight: bold;
+    color: white;
+    border-radius: 10px;
+    border: 0;
+    background-color: var(--second-color);
+}
+
+.secondary-box {
+    padding: .5rem 1rem;
+    font-weight: bold;
+    color: white;
+    border-radius: 10px;
+    border: 0;
+    background-color: var(--first-color);
 }
