--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-    {% include "navbar.html" %}
+    {% include "components/navbar.html" %}
 {% endblock %}
 
 {% block main %}
