--- a/templates/forms/changePassword.html
+++ b/templates/forms/changePassword.html
@@ -1,26 +1,27 @@
 
+
 {% extends "base.html" %}
 
 {% block title %}
-    Log in
+    Changing password
 {% endblock %}
 
 {% block main %}
 <section style="margin-bottom: 2rem;margin-top: 2rem;">
-    <h1 class="secondary-box">Log in</h1>
+    <h1 class="secondary-box">Changing password</h1>
 </section>
 <form class="card" method="post" style="width: 400px;">
     <section class="input-group">
-        <p><i class="fa-solid fa-envelope"></i> email</p>
-        <input type="email" placeholder="e.g. name@domain.com" name="email" aria-label="email-input" value="{{ values.email }}">
+        <p><i class="fa-solid fa-key"></i> new password</p>
+        <input type="password" placeholder="new password" name="password" aria-label="password-input" value="{{ values.password }}">
     </section>
     <section class="input-group">
-        <p><i class="fa-solid fa-key"></i> password</p>
-        <input type="password" placeholder="Enter password" name="password" aria-label="password-input" value="{{ values.password }}">
+        <p><i class="fa-solid fa-key"></i> repeat password</p>
+        <input type="password" placeholder="repeat new password" name="confirmPassword" aria-label="confirm-password-input" value="{{ values.confirmPassword }}">
     </section>
     <button class="primary-button" style="margin-top: 1rem;" role="submit" aria-label="confirm">
         <span style="font-size: 1.2rem;" aria-hidden="true">
-            Log in
+            Change password
         </span>
     </button>
     <section style="margin-top: 1rem;">
@@ -31,10 +32,7 @@
         {% endif %}
     </section>
 </form>
-<a style="font-size: 1.1rem;margin-top: 2rem;" href="{{ url_for('register_user') }}">
-    I don't have a account
-</a>
-<a class="primary-button" style="margin-top: 2rem;margin-bottom: 2rem;" href="{{ url_for('main_page') }}">
+<a class="primary-button" style="margin-top: 2rem;margin-bottom: 2rem;" href="{{ url_for('user_data', id=session.get('idUser')) }}">
     <span style="font-size: 1.2rem;" aria-hidden="true">
         Back
     </span>
