--- a/templates/forms/register.html
+++ b/templates/forms/register.html
@@ -46,7 +46,7 @@
 <a style="font-size: 1.1rem;margin-top: 2rem;" href="{{ url_for('login_user')}}">
     I have already an account
 </a>
-<a class="primary-button" style="margin-top: 2rem;margin-bottom: 2rem;" href="{{ url_for('welcome_page') }}">
+<a class="primary-button" style="margin-top: 2rem;margin-bottom: 2rem;" href="{{ url_for('main_page') }}">
     <span style="font-size: 1.2rem;" aria-hidden="true">
         Back
     </span>
