created template for changing email

--- a/templates/user.html
+++ b/templates/user.html
@@ -57,7 +57,7 @@
             <div class="primary-spliter" aria-label="spliter"></div>
         </section>
         <section class="flex-center" style="width: 100%;flex-direction: column;row-gap: 1rem;justify-content: start;">
-            <a href="{{ url_for('changing_password') }}">
+            <a href="{{ url_for('changing_email') }}">
                 <button class="secondary-button" aria-label="changing email button">
                     <span aria-hidden="true" style="font-size: 2rem;">
                         <i class="fa-solid fa-envelope"></i> Change email adress
