starting creating my votes section

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -15,7 +15,7 @@
                                 </span>
                             </button>
                         </a>
-                        <a href="{{ url_for('login_user')}}">
+                        <a href="{{ url_for('votes_page')}}">
                             <button class="primary-button" aria-label="login-button">
                                 <span style="font-size: x-large;" aria-hidden="true">
                                     My votes
