created creating vote form

--- a/styles/main.css
+++ b/styles/main.css
@@ -133,6 +133,26 @@ main .welcome-subtitle {
     border-radius: 5px;
 }
 
+.checkbox-group {
+    margin: .3rem 0;
+    display: flex;
+    column-gap: 8px;
+    align-items: center;
+}
+
+.checkbox-group input {
+    height: 40px;
+    width: 20px;
+    font-size: 1rem;
+    padding: .2rem .4rem;
+    border: 2px solid var(--second-color);
+    border-radius: 5px;
+}
+
+.checkbox-group p {
+    font-weight: bold;
+}
+
 .primary-select {
     height: 40px;
     font-size: 1rem;
