fixes wrong submit atribute

--- a/templates/forms/changeData.html
+++ b/templates/forms/changeData.html
@@ -19,7 +19,7 @@
         <p><i class="fa-solid fa-user"></i> Surname</p>
         <input type="text" placeholder="new surname" name="surname" aria-label="name-input" value="{{ values.surname }}">
     </section>
-    <button class="primary-button" style="margin-top: 1rem;" role="submit" aria-label="confirm">
+    <button class="primary-button" style="margin-top: 1rem;" type="submit" aria-label="confirm">
         <span style="font-size: 1.2rem;" aria-hidden="true">
             Change name and surname
         </span>
