--- a/templates/forms/changeEmail.html
+++ b/templates/forms/changeEmail.html
@@ -15,7 +15,7 @@
         <p><i class="fa-solid fa-envelope"></i> Email</p>
         <input type="email" placeholder="new Email" name="email" aria-label="email-input" value="{{ values.email }}">
     </section>
-    <button class="primary-button" style="margin-top: 1rem;" role="submit" aria-label="confirm">
+    <button class="primary-button" style="margin-top: 1rem;" type="submit" aria-label="confirm">
         <span style="font-size: 1.2rem;" aria-hidden="true">
             Change email adress
         </span>
