--- a/templates/forms/changePassword.html
+++ b/templates/forms/changePassword.html
@@ -19,7 +19,7 @@
         <p><i class="fa-solid fa-key"></i> repeat password</p>
         <input type="password" placeholder="repeat new password" name="confirmPassword" aria-label="confirm-password-input" value="{{ values.confirmPassword }}">
     </section>
-    <button class="primary-button" style="margin-top: 1rem;" role="submit" aria-label="confirm">
+    <button class="primary-button" style="margin-top: 1rem;" type="submit" aria-label="confirm">
         <span style="font-size: 1.2rem;" aria-hidden="true">
             Change password
         </span>
