--- a/templates/forms/login.html
+++ b/templates/forms/login.html
@@ -18,7 +18,7 @@
         <p><i class="fa-solid fa-key"></i> password</p>
         <input type="password" placeholder="Enter password" name="password" aria-label="password-input" value="{{ values.password }}">
     </section>
-    <button class="primary-button" style="margin-top: 1rem;" role="submit" aria-label="confirm">
+    <button class="primary-button" style="margin-top: 1rem;" type="submit" aria-label="confirm">
         <span style="font-size: 1.2rem;" aria-hidden="true">
             Log in
         </span>
