--- a/templates/forms/creatingVote.html
+++ b/templates/forms/creatingVote.html
@@ -83,7 +83,7 @@
     </button>
 </form>
 
-<a class="primary-button" style="margin-top: 2rem;margin-bottom: 2rem;" href="{{ url_for('main_page') }}">
+<a class="primary-button" style="margin-top: 2rem;margin-bottom: 2rem;" href="{{ url_for('votes_page') }}">
     <span style="font-size: 1.2rem;" aria-hidden="true">
         Back
     </span>
