--- a/templates/pages/votes.html
+++ b/templates/pages/votes.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-    <section class="flex-center" style="flex-direction: column;">
+    <section class="flex-center" style="flex-direction: column;margin-top: 3rem;">
         {% if success %}
             <section style="margin-top: 1rem;">
                 <p class="success-message"><i class="fa-solid fa-check"></i> {{ success }}</p>
@@ -28,20 +28,64 @@
             </button>
         </a>
     </section>
-    <section style="margin-top: 3rem;" class="flex-center">
+    <section style="margin-top: 3rem;flex-direction: column;row-gap: 1rem;" class="flex-center">
         <section>
             <h1>My votes</h1>
             <div class="primary-spliter" aria-label="spliter"></div>
         </section>
-        <section>
-            <select name="" class="primary-select" style="margin-left: 3rem;">
+        <form method="get" style="display: flex;justify-content: space-between;width: 400px;">
+            <button class="primary-button">
+                <span style="font-size: 1.5rem;" aria-hidden="true">
+                    <i class="fa-solid fa-magnifying-glass"></i> Search
+                </span>
+            </button>
+            <select name="sort" class="primary-select">
                 <option value="" style="display: none;" selected>Sort by</option>
+                <option value="title">Title</option>
+                <option value="startDate">Start date</option>
+                <option value="endDate">End date</option>
             </select>
-        </section>
+        </form>
     </section>
-    <section style="margin-top: 3rem;">
+    <section style="margin-top: 3rem;margin-bottom: 3rem;">
         {% if votes %}
-
+            {% for element in votes %}
+                <section style="display: flex;flex-direction: column;max-width: 400px;" class="vote-container">
+                    <section class="{{ 'success-message' if element.status == 'In progress' else 'warning-message' if element.status == 'Waiting' else 'error-message' }}" style="text-align: center;">
+                        <h3>{{ element.status }}</h3>
+                    </section>
+                    <section>
+                        <h2 style="text-align: center;">{{ element.title }}</h2>
+                        <div class="primary-spliter"></div>
+                    </section>
+                    <section class="flex-center" style="margin-top: 1rem;column-gap: .5rem;">
+                        <p>{{ element.startDate }} - {{ element.endDate }}</p>
+                    </section>
+                    <section style="margin-top: 1rem;column-gap: .5rem;">
+                        <h3 style="margin-bottom: .5rem;">Vote options</h3>
+                        {% for voteOption in element.options %}
+                            <ul style="margin-left: 1rem;">
+                                <li>{{ voteOption.name }}</li>
+                            </ul>
+                        {% endfor %}
+                    </section>
+                    <section style="margin-top: 1rem;column-gap: .5rem;">
+                        <h3 style="margin-bottom: .5rem;">Description</h3>
+                        <p>{{ element.description[:100] }}...</p>
+                    </section>
+                    <section style="margin-top: 1rem;column-gap: .5rem;">
+                        <h3 style="margin-bottom: .5rem;">Actions</h3>
+                        <section class="flex-center" style="justify-content: space-around;">
+                            <button class="primary-button">
+                                Preview
+                            </button>
+                            <button class="danger-button">
+                                Delete
+                            </button>
+                        </section>
+                    </section>
+                </section>
+            {% endfor %}
         {% else %}
             <h1>You have nothing there!</h1>
         {% endif %}
